--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "lint:js": "eslint 'src/**/*.ts'",
     "lint:fix": "npm run lint -- --fix && npm run prettier:fix",
     "prettier:fix": "prettier --write --config ./.prettierrc .",
-    "dist": "NODE_ENV=production tsc -d -p .",
+    "dist": "tsc -p tsconfig.json && tsc-alias --project tsconfig.json",
+    "gen": "ts-node ./gen.ts",
     "build": "npm run clean && tsc",
     "clean": "rm -rf dist"
   },
@@ -28,7 +29,6 @@
     "node": ">=10.12.0"
   },
   "dependencies": {
-    "@types/js-yaml": "^4.0.5",
     "axios": "^0.27.2",
     "axios-rate-limit": "^1.3.0",
     "axios-retry": "^3.2.5",
@@ -42,6 +42,8 @@
   "devDependencies": {
     "@types/config-yaml": "^1.1.1",
     "@types/jest": "27.5.0",
+    "@types/js-yaml": "^4.0.5",
+    "@types/json-schema": "^7.0.11",
     "@types/nested-error-stacks": "2.1.0",
     "@types/node": "17.0.31",
     "@typescript-eslint/eslint-plugin": "5.23.0",
@@ -50,9 +52,12 @@
     "eslint-plugin-import": "2.26.0",
     "husky": "8.0.1",
     "jest": "28.1.0",
+    "json-schema": "^0.4.0",
+    "json-schema-to-typescript": "^10.1.5",
     "prettier": "2.6.2",
     "ts-jest": "28.0.2",
     "ts-node": "10.7.0",
+    "tsc-alias": "^1.6.7",
     "typescript": "4.6.4"
   }
 }
