--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "postman-cli",
+  "name": "@vitorsss/postman-cli",
   "version": "1.0.0",
   "description": "Postman CLI",
   "main": "dist/index.js",
@@ -14,12 +14,23 @@
     "lint:js": "eslint 'src/**/*.ts'",
     "lint:fix": "npm run lint -- --fix && npm run prettier:fix",
     "prettier:fix": "prettier --write --config ./.prettierrc .",
+    "cmd": "ts-node index.ts",
     "dist": "tsc -p tsconfig.json && tsc-alias --project tsconfig.json",
     "gen": "ts-node ./gen.ts",
     "build": "npm run clean && tsc",
     "clean": "rm -rf dist"
   },
-  "author": "",
+  "homepage": "https://github.com/vitorsss/postman-cli",
+  "author": "Vitor Soares Silva <silva.vitor.soares@gmail.com>",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/vitorsss/postman-cli.git"
+  },
+  "keywords": [
+    "postman",
+    "cli",
+    "api"
+  ],
   "license": "Apache-2.0",
   "bin": {
     "pm": "./dist/index.js",
@@ -58,6 +69,7 @@
     "ts-jest": "28.0.2",
     "ts-node": "10.7.0",
     "tsc-alias": "^1.6.7",
+    "tsconfig-paths": "^4.0.0",
     "typescript": "4.6.4"
   }
 }
