--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,9 +34,12 @@
       "@helpers/*": ["./src/helpers/*"],
       "@helpers": ["./src/helpers/index"],
       "@integrations/*": ["./src/integrations/*"],
-    }
+    },
   },
   "tsc-alias": {
     "verbose": true,
+  },
+  "ts-node": {
+    "require": ["tsconfig-paths/register"],
   },
 }
