--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "lint:js": "eslint 'src/**/*.ts'",
     "lint:fix": "npm run lint -- --fix && npm run prettier:fix",
     "prettier:fix": "prettier --write --config ./.prettierrc .",
-    "cmd": "ts-node index.ts",
-    "dist": "tsc -p tsconfig.json && tsc-alias --project tsconfig.json",
+    "cmd": "ts-node ./bin.ts",
+    "dist": "npm run build && tsc-alias --project tsconfig.json",
     "gen": "ts-node ./gen.ts",
-    "build": "npm run clean && tsc",
+    "build": "npm run clean && tsc -p tsconfig.json",
     "clean": "rm -rf dist"
   },
   "homepage": "https://github.com/vitorsss/postman-cli",
@@ -33,8 +33,8 @@
   ],
   "license": "Apache-2.0",
   "bin": {
-    "pm": "./dist/index.js",
-    "postman": "./dist/index.js"
+    "pm": "./dist/bin.js",
+    "postman": "./dist/bin.js"
   },
   "engines": {
     "node": ">=10.12.0"
