--- a/docs/schemas/variables/1.0.0/variables.yaml
+++ b/docs/schemas/variables/1.0.0/variables.yaml
@@ -26,7 +26,7 @@ definitions:
         default: false
         description: If set to true, the current parameter will not be sent with requests.
       description:
-        $ref: "./description.yaml"
+        $ref: "../../description/1.0.0/description.yaml"
     required:
       - key
     additionalProperties: false
