filter out attached collections and
add support for public workspaces

--- a/.pm.yaml.example
+++ b/.pm.yaml.example
@@ -1,1 +1,4 @@
 token: PMAK-no12hy8de9y89sadas-bni1323hu3i1h89das7897d891232j1
+baseurl: https://api.getpostman.com
+workdir: ./pac
+workspace: 405e0480-49cf-463b-8052-6c0d05a8e8f3
