--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "deepmerge": "^4.2.2",
     "enquirer": "^2.3.6",
     "js-yaml": "^4.1.0",
-    "postman-collection": "^4.1.2"
+    "postman-collection": "^4.1.2",
+    "update-notifier": "^5.1.0"
   },
   "devDependencies": {
     "@types/config-yaml": "^1.1.1",
@@ -57,6 +58,7 @@
     "@types/json-schema": "^7.0.11",
     "@types/nested-error-stacks": "2.1.0",
     "@types/node": "17.0.31",
+    "@types/update-notifier": "^5.1.0",
     "@typescript-eslint/eslint-plugin": "5.23.0",
     "@typescript-eslint/parser": "5.23.0",
     "eslint": "8.15.0",
