--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@vitorsss/postman-cli",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "Postman CLI",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -43,6 +43,7 @@
     "axios": "^0.27.2",
     "axios-rate-limit": "^1.3.0",
     "axios-retry": "^3.2.5",
+    "clean-deep": "^3.4.0",
     "commander": "^9.2.0",
     "config-yaml": "^1.1.6",
     "deepmerge": "^4.2.2",
